--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
   <nav>
     <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html" class="active" style = "background-color: chocolate;">Home</a></li>
+      <li><a href="about.html"style = "background-color: chocolate;">About Me</a></li>
+      <li><a href="projects.html"style = "background-color: chocolate;">Projects</a></li>
+      <li><a href="contact.html"style = "background-color: chocolate;">Contact</a></li>
     </ul>
   </nav>
 
-  <header>
+  <header style = "background-color:coral">
     <h1>Welcome to My Portfolio</h1>
     <p>This is the homepage where I introduce myself and showcase my skills and achievements.</p>
   </header>
+
+  <img src= "image.jpeg">
 
 </body>
 </html>
